--- a/network/config.json
+++ b/network/config.json
@@ -8,7 +8,7 @@
     "text": "PantheonWork"
   },
   "text": {
-    "more": "",
+    "more": "2020/06/11-11/02/21",
     "intro": "",
     "title": "derecho a la ciudad 2020"
   },
